# cmake_learn

./: CMakeLists.txt  hello.c  test.c
oss/: 1.c  2.c  CMakeLists.txt
